--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -192,7 +192,7 @@
             <dl class="dl-horizontal">
                <dt>Group term life insurance benefits</dt>
                <dd>
-                  <p id="h-2-1">If you provide <strong>current or former </strong>employees with taxable <strong>group term life insurance </strong>benefits, you <strong>always </strong>have to issue a T4 slip, even if the total of all remuneration paid in the calendar year is $500 of less. </p>
+                  <p id="h-2-1">If you provide <strong>current or former </strong>employees with taxable <strong>group term life insurance </strong>benefits, you <strong>always </strong>have to issue a T4 slip, even if the total of all remuneration paid in the calendar year is <strong>$500 or less</strong>. </p>
                </dd>
             </dl>
 </div>
@@ -615,7 +615,7 @@
 <dt>Payments out of a <abbr title="Employee benefit plan">EBP</abbr></dt>
 <dd>Report payments you made out of an employee benefit plan (<abbr title="Employee benefit plan">EBP</abbr>) and amounts that a trustee allocated under an employee trust using box 14.</dd>
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not</strong> report tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using box 14, use <a href="#cd_71">code 71</a> or for a self-employed worker use <a href="#cd_88">code 88</a>.
 </dd>
 
@@ -728,7 +728,7 @@
      </dd>
 
 <dt>Over deductions (overpayment)</dt>
-<dd><p>Report the <strong>total</strong> <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the <strong>total</strong> <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you over deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
@@ -745,9 +745,9 @@
         </ul>
   </dd>
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p> Report amounts you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
-<p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is not pensionable unless you elected to provide <abbr title="Canada Pension Plan">CPP</abbr> coverage to all of your Indian employee on their tax-exempt employment income.</p>
+<p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is not pensionable unless you elected to provide <abbr title="Canada Pension Plan">CPP</abbr> coverage to all of your First Nations employees on their tax-exempt employment income.</p>
 </dd>
 
 
@@ -764,7 +764,7 @@
             </ul>      </dd>
 
  </dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a> and  <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI explained</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a></p>         
 
             </details>
 </li>
@@ -787,7 +787,7 @@
      </dd>
 
 <dt>Over deductions (overpayment)</dt>
-<dd><p>Report the <strong>total</strong> <abbr title="Second Canada Pension Plan">CPP2</abbr> deductions using box 16A <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the <strong>total</strong> <abbr title="Second Canada Pension Plan">CPP2</abbr> deductions using box 16A <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you over deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
@@ -807,7 +807,7 @@
 </dl>
 <p>If required, the CRA may need to update the instructions during 2023. </p>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI Explained</a></p>  
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a> </p>  
 </details>	    	    
 	</li>
 
@@ -822,7 +822,7 @@
 <dt>No deductions</dt>
 <dd> <p><strong>Do not </strong>report any amount using box 17 if you <strong>did not</strong> deduct <abbr title="Quebec Pension Plan">QPP</abbr>.</p></dd>
 
-<dt>Province of employment is other than Quebec</dt>
+<dt>Province of employment is not Quebec</dt>
 <dd> <p><strong>Do not </strong>report any amount using box 17 if box 10 shows their province of employment is other than Quebec, use <a href="#bx_16">box 16</a>.</p>
      </dd>
 
@@ -830,7 +830,7 @@
 <dd> <p><strong>Do not </strong>report <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions using box 17, use <a href="#bx_17a">box 17A</a>.</p>
      </dd>
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p> Report amounts you deducted for your employee's share of the <abbr title="Quebec Pension Plan">QPP</abbr> contributions using box 17. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
 <p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is not pensionable and you must deduct <abbr title="Quebec Pension Plan">QPP</abbr> contributions.</p>
 </dd>
@@ -883,7 +883,7 @@
 <dd> <p><strong>Do not </strong>report any amount using box 18 if you <strong>did not</strong> deduct <abbr title="Employment insurance">EI</abbr>.</p></dd>
 
 <dt>Over deductions (overpayment)</dt>
-<dd><p>Report the total <abbr title="Employment insurance">EI</abbr> deductions using box 18 <strong>and</strong> the correct insurable earnings using <a href="#bx_24">box 24</a> if you overdeducted EI premiums (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the total <abbr title="Employment insurance">EI</abbr> deductions using box 18 <strong>and</strong> the correct insurable earnings using <a href="#bx_24">box 24</a> if you over deducted EI premiums (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted EI premiums:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
@@ -898,7 +898,7 @@
         </ul>
   </dd>
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p> Report amounts you deducted for your employee's share of the <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
 <p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is insurable and you must deduct EI premiums.</p>
 </dd>
@@ -965,10 +965,10 @@
 <dt>More than 1 slip </dt>
 <dd><p>Report the insurable earnings amount for each period of employment in box 24 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
             <details><summary>Example</summary>
-            <p>An employee earned $30,000 working in Ontario from January 2023 to June 2023 and earned $30,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 24 as follows:</p>
+            <p>An employee earned $30,000 working in Ontario from January 2023 to June 2023 and earned $40,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 24 as follows:</p>
             <ul>
             <li>Ontario T4 slip &ndash; box 14 = $30,000 and box 24 = $30,000 </li>
-            <li>Quebec T4 slip &ndash; box 14 = $30,000 and box 24 = $26,300 (calculated as the maximum insurable earnings for 2023 of $56,300 &ndash; $30,000 already reported on T4 slip with Ontario as province of employment = $26,300) </li>
+            <li>Quebec T4 slip &ndash; box 14 = $40,000 and box 24 = $31,500 (calculated as the maximum insurable earnings for 2023 of $61,500 &ndash; $30,000 already reported on T4 slip with Ontario as province of employment = $31,500) </li>
             </ul> </details>
             </dd>
 
@@ -1042,10 +1042,10 @@
 <dt>More than 1 slip </dt>
 <dd><p>Report the pensionable earnings amount for each period of employment in box 26 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
             <details><summary>Example</summary>
-            <p>An employee earned $35,000 working in Ontario from January 2023 to June 2023 and earned $35,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 26 as follows:</p>
+            <p>An employee earned $35,000 working in Ontario from January 2023 to June 2023 and earned $40,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 26 as follows:</p>
             <ul>
             <li>Ontario T4 slip &ndash; box 14 = $35,000 and box 26 = $35,000 </li>
-            <li>Quebec T4 slip &ndash; box 14 = $35,000 and box 26 = $26,600 (calculated as the maximum pensionable earnings for 2023 of $61,600 &ndash; $35,000 already reported on T4 slip with Ontario as province of employment = $26,600) </li>
+            <li>Quebec T4 slip &ndash; box 14 = $40,000 and box 26 = $31,600 (calculated as the maximum pensionable earnings for 2023 of $66,600 &ndash; $35,000 already reported on T4 slip with Ontario as province of employment = $31,600) </li>
             </ul> </details>
             </dd>
 
@@ -1113,7 +1113,7 @@
 <dt>Direct transfers</dt>
 <dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> from an employee's <abbr title="Registered retirement savings plan">RRSP</abbr>.</p></dd>
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the <abbr title="registered pension plan">RPP</abbr> contribution and report the amount related to their taxable income using code box 20.</p>
 <p>Give your employee proof of the amounts of <abbr title="registered pension plan">RPP</abbr> contributions for all tax-exempt income. Your employee will use this amount to fill out Form T90.</p>
@@ -1196,7 +1196,7 @@
 <dd><p><strong>Do not</strong> report initiation fees using box 44. </p></dd>
 <dt>Strike pay</dt>
 <dd><p><strong>Do not</strong> report <strong>strike pay</strong> the union paid to union members using box 44.</p></dd>
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for union dues relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 44.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report the amount related to their taxable income using box 44.</p>
 <p>Give your employee proof of the amounts of union dues for all tax-exempt income. Your employee will use this amount to fill out Form T90.</p>
@@ -1352,7 +1352,7 @@
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not </strong>report non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act using code 66, use <a href="#cd_69">code 69</a>.</dd>
 <dt>Non-eligible retiring allowances </dt>
 <dd><strong>Do not </strong>report non-eligible retiring allowances using code 66, use <a href="#cd_67">code 67</a>.</dd>
@@ -1366,7 +1366,7 @@
             <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not </strong>report non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act using code 67, use <a href="#cd_69">code 69</a>.</dd>
 <dt>Eligible retiring allowances </dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 67, use <a href="#cd_66">code 66</a>.</dd>
@@ -1675,13 +1675,13 @@
             </div>
             </section> 
             <section id="indian11" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">Indian employees</h2></header>
+            <header class="modal-header"><h2 class="modal-title">First Nations employees</h2></header>
             <div class="modal-body">
             <div data-ajax-replace="#ajax-indian11"></div>
             </div>
             </section> 
             <section id="indian22" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">Indians who are self-employed</h2></header>
+            <header class="modal-header"><h2 class="modal-title">First Nations who are self-employed</h2></header>
             <div class="modal-body">
             <div data-ajax-replace="#ajax-indian22"></div>
             </div>
