--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -197,8 +197,8 @@
  <div id="ajax-ex1">
 <p id="h-2-1">You must issue a T4A slip if <strong>one </strong>of the following apply:</p>
 <ul>
-<li>Total <strong>accumulated income</strong> paid to a subscriber  is <strong>more than $50 </strong>in the calendar year </li>
-<li>Total <strong>educational assistance</strong> paid to a beneficiary  is <strong>more than $50 </strong>in the calendar year  </li>
+<li>Total <strong>accumulated income payments</strong> paid to a subscriber  is <strong>more than $50 </strong>in the calendar year </li>
+<li>Total <strong>educational assistance payments</strong> paid to a beneficiary  is <strong>more than $50 </strong>in the calendar year  </li>
 </ul>
 </div>
 </dd>
@@ -446,7 +446,7 @@
   </ul>
 </dd>
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not</strong> report tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 016, use <a href="#cd146">code 146</a>.
 </dd>
 
@@ -522,7 +522,7 @@
 <dt>Unregistered plan</dt>
 <dd>Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registered using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dt>First Nations (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018, use <a href="#cd148">code 148</a>.
 </dd>
 
@@ -671,7 +671,7 @@
 </li>
 <li class="code-num">
  <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service) </summary> 
-  <p id="cd032">Report the contributions to a <abbr title="Registered pension plan">RPP</abbr> a former employee made to buy past service using code 032.</p> 
+  <p id="cd032">Report the contributions to a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) a former employee made to buy past service using code 032.</p> 
  <h4>Specific situations </h4>
 <p> The plan administrator usually fills out the T4A slip when an employer-employee relationship no longer exists. You must include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time. </p> 
 <dl class="dl-horizontal">
@@ -689,7 +689,7 @@
 </li>
 <li class="code-num">
  <details> <summary>Code 034 – Pension adjustment </summary> 
-  <p  id="cd034">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has  under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services using code 034 if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>).</p>
+  <p  id="cd034">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has  under a <abbr title="registered pension plan">RPP</abbr> during a period of leave or reduced services using code 034 if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>).</p>
 
 <p>You must also enter the plan registration number using <a href="#cd036">code 036</a>.</p>
  <h4>Specific situations </h4>
@@ -704,7 +704,7 @@
 
 <li class="code-num">
  <details>  <summary>Code 036 – Plan registration number </summary> 
-<p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using code 036 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 034</a>.</p> 
+<p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using code 036 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using <a href="#cd034">code 034</a>.</p> 
 
 <p>You have to report the plan number even if your plan requires only employer contributions.</p>
 
@@ -750,7 +750,7 @@
 </li>
 <li class="code-num">
  <details >  <summary>Code 046 – Charitable donations  </summary> 
-  <p id="cd046">Report the amount you deducted from the recipient’s earnings for donations to a registered charity in Canada using code 046. </p>
+  <p id="cd046">Report the amount you deducted from the recipient’s earnings for donations to registered charities in Canada using code 046. </p>
 <p>Learn more: <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of Charities</a></p> 
  </details> 
 </li>
@@ -861,7 +861,7 @@
  </li>
 <li class="code-num">
 <details >  <summary>Code 117 – Loan benefits </summary> 
-  <p id="cd117">Report the taxable loan benefit you provided to a person or partnership that was a shareholder using code 117.</p>
+  <p id="cd117">Report the taxable loan benefit you provided to a person or partnership that was received as a shareholder using code 117.</p>
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
  
@@ -869,7 +869,7 @@
 </li>
 <li class="code-num">
 <details ><summary>Code 118 – Medical premium benefits </summary> 
-<p id="cd118">Report the premiums that you paid as contribution to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee using code 118.</p>
+<p id="cd118">Report the premiums that you paid as a contribution to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee using code 118.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Insurance plans</a></p>	 
 </details> 
 </li>
