--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -764,7 +764,7 @@ html:lang(fr) .cnjnctn-or:before {
   <section class="gc-nav-section experimental provisional">
     <h1 property="name" id="wb-cont">How to complete the return and calculate the tax</h1>
     <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax (UHT) return for the calendar year.</p>
-	  <p>You must file a separate return for each residential property that you own.</p>
+	  <p>If you are an affected owner of more than one residential property, you must file a separate return for each of those properties.</p>
 	  <p>If you are one of several affected owners of the residential property, each of you must file a separate return for the property.</p>
     <p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a></p>
     
@@ -891,10 +891,11 @@ html:lang(fr) .cnjnctn-or:before {
         <details>
           <summary>Section 2 – Election to designate a residential property</summary>
           <p>Complete this section if you answered <strong>yes</strong> for line 300, and <strong>no</strong> for line 310.</p>
-          <p><strong>Line 315</strong>: By answering yes, you are designating the residential property (described in Part 2) for purposes of this election. This means you are declaring:</p>
+          <p><strong>Line 315</strong>: By answering yes, you are designating the residential property (described in Part 2) for purposes of the exemptions for primary place of residence (Part 4) and qualifying occupancy (Part 5).</p>
+		<p>This means you are declaring:</p>
           <ul>
-            <li>Only that one residential property can be considered as qualifying for the <strong>exemption for primary place of residence</strong></li>
-            <li>For only that one residential property can your personal occupancy of a dwelling unit (or the personal occupancy of your spouse or common-law partner) be considered as usable for the <strong>exemption for qualifying occupancy</strong></li>
+            <li>Only the residential property can be considered as qualifying for the <strong>exemption for primary place of residence</strong></li>
+            <li>For only the residential property can your personal occupancy of a dwelling unit (or the personal occupancy of your spouse or common-law partner) be considered as usable for the <strong>exemption for qualifying occupancy</strong></li>
           </ul>
           <br>
           <p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
@@ -902,10 +903,11 @@ html:lang(fr) .cnjnctn-or:before {
         <details>
           <summary>Section 3 – Joint election to designate a residential property</summary>
           <p>Complete this section if you answered <strong>yes</strong> for line 300, and <strong>yes</strong> for line 310.</p>
-          <p><strong>Line 320</strong>: By answering yes, you are designating the residential property (described in Part 2) for purposes of this election. This means you are declaring:</p>
+          <p><strong>Line 320</strong>: By answering yes, you are designating the residential property (described in Part 2) for purposes of the exemptions for primary place of residence (Part 4) and qualifying occupancy (Part 5).</p>
+		<p>This means you are declaring:</p>
           <ul>
-            <li>Only that one residential property can be considered as qualifying for the <strong>exemption for primary place of residence</strong></li>
-            <li>For only that one residential property can your personal occupancy of a dwelling unit (or the personal occupancy of your spouse or common-law partner) be considered as usable for the <strong>exemption for qualifying occupancy</strong></li>
+            <li>Only the residential property can be considered as qualifying for the <strong>exemption for primary place of residence</strong></li>
+            <li>For only the residential property can your personal occupancy of a dwelling unit (or the personal occupancy of your spouse or common-law partner) be considered as usable for the <strong>exemption for qualifying occupancy</strong></li>
           </ul>
           <br>
           <p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
