--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -918,6 +918,7 @@ html:lang(fr) .cnjnctn-or:before {
         </details>
         <p class="mrgn-tp-md">If you choose to make an election, you may only designate one residential property.</p>
         <p>You cannot elect to designate different residential properties to claim multiple exemptions based on your, or your spouse's or common-law partner's, personal occupancy of the properties.</p>
+	      <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn8/special-rule-elections-individual-owners-multiple-residential-properties.html">UHTN8, Special Rule and Elections for Individual Owners of Multiple Residential Properties</a></p>
       </li>
       <li>
         <h3 id="pt4">Part 4 - Exemption for primary place of residence</h3>
@@ -933,7 +934,7 @@ html:lang(fr) .cnjnctn-or:before {
         <p>Review tax notice:<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank"> UHTN7, Exemption for residential properties that are used for qualifying occupancy</a> </li>
       <li>
         <h3>Part 6 - Other exemptions</h3>
-        <p>Complete this part if your ownership of the residential property is exempt for reasons <strong>other than</strong> primary place of residence or qualifying occupancy.</p>
+        <p>Complete this part if you are claiming an exemption <strong>other than</strong> the exemption for primary place of residence or qualifying occupancy.</p>
         <p>You may only select one exemption. </p>
         <a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#h_1_3">Exemption eligibility for affected owners</a> </li>
       <li>
