--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -761,7 +761,7 @@ html:lang(fr) .cnjnctn-or:before {
   </section>
   <section class="gc-nav-section experimental provisional">
     <h1 property="name" id="wb-cont">Who must file a return and pay the tax</h1>
-    <p>You must file an Underused Housing Tax return for <strong>each</strong> of your properties in Canada if <strong>all of the following</strong> conditions are met on <span class="nowrap">December 31</span>:</p>
+    <p>You must file an Underused Housing Tax return for <strong>each</strong> of your properties in Canada for which <strong>all of the following</strong> conditions are met on <span class="nowrap">December 31</span>:</p>
     <ul class="cnjnctn-type-and cnjnctn-sm">
       <li class="cnjnctn-col">
         <p>The property is a <strong>residential property</strong></p>
@@ -800,7 +800,7 @@ html:lang(fr) .cnjnctn-or:before {
     </details>
     <h3 id="aff2">Affected owner</h3>
     <p>As an affected owner, you <strong>must file</strong> an annual return.</p>
-    <p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
+    <p>If you are an affected owner of more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
     <p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
     <p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a></p>
     <details>
@@ -811,13 +811,13 @@ html:lang(fr) .cnjnctn-or:before {
       <p><a href="#h_1_3">Exemption eligibility for affected owners</a></p>
     </details>
     <h3>Excluded owner</h3>
-    <p>If you are not an affected owner, then you are an excluded owner. You <strong>do not</strong> have to:</p>
+    <p>If you are an excluded owner you <strong>do not</strong> have to:</p>
     <ul>
       <li>File a return</li>
       <li>Pay the tax</li>
     </ul>
     <h2 id="determine">Determine if you are an affected or excluded residential property owner</h2>
-    <p>Find out which type of owner you are based on your situation, and if you may qualify for an exemption from paying the tax.</p>
+    <p>Find out which type of owner you are based on your situation, and the types of exemptions from paying the tax that might be available.</p>
     <div class="wb-tabs mrgn-tp-lg">
       <div class="tabpanels">
         <details id="interactive">
