--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1253,7 +1253,11 @@ html:lang(fr) .cnjnctn-or:before {
                 <details>
                   <summary id="primary-res">Primary place of residence</summary>
                   <div id="primary-res-content">
-                    <p>To qualify for this exemption a dwelling unit that is part of the residential property must be the primary place of residence of the owner, their spouse or common-law partner, or their child who is attending a designated learning institution.</p>
+                    <p>To qualify for this exemption, a dwelling unit that is part of the residential property must be the primary place <mark>of residence</mark> of any of the following for the calendar year:</p>
+			  <ul>
+				  <li>you or your spouse or common-law partner</li>
+				  <li>your child, or your spouse's or common-law partner's child, who occupies the residential property while pursuing authorized study at a designated learning institution.</li>
+			  </ul>
                     <p>Review tax notice:<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank"> UHTN6, Exemption for residential properties that are used as a primary place of residence</a></p>
                   </div>
                 </details>
