--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -918,7 +918,7 @@ html:lang(fr) .cnjnctn-or:before {
         </details>
         <p class="mrgn-tp-md">If you choose to make an election, you may only designate one residential property.</p>
         <p>You cannot elect to designate different residential properties to claim multiple exemptions based on your, or your spouse's or common-law partner's, personal occupancy of the properties.</p>
-	      <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn8/special-rule-elections-individual-owners-multiple-residential-properties.html">UHTN8, Special Rule and Elections for Individual Owners of Multiple Residential Properties</a></p>
+	      <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn8/special-rule-elections-individual-owners-multiple-residential-properties.html" target="_blank">UHTN8, Special Rule and Elections for Individual Owners of Multiple Residential Properties</a></p>
       </li>
       <li>
         <h3 id="pt4">Part 4 - Exemption for primary place of residence</h3>
