--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1190,8 +1190,8 @@ html:lang(fr) .cnjnctn-or:before {
           <p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property.</p>
           <p>An <strong>affected owner</strong> includes, but is not limited to, the following owners of a residential property in Canada:</p>
           <ul>
-            <li>An individual who is <strong>not</strong> a Canadian citizen or permanent resident</li>
-            <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property  in Canada as a trustee of a trust (other than as a personal representative of a deceased individual, and as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes)</li>
+            <li>A foreign national (that is, an individual who is <strong>not</strong> a Canadian citizen or permanent resident)</li>
+            <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property  in Canada as a trustee of a trust (other than as a personal representative of a deceased individual, or as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes)</li>
             <li>An individual who is a Canadian citizen or permanent resident, and who owns a residential property as a partner of a partnership</li>
             <li>A corporation that is incorporated outside of Canada</li>
             <li>A Canadian corporation whose shares are not listed on a Canadian stock exchange designated for Canadian income tax purposes</li>
@@ -1217,7 +1217,7 @@ html:lang(fr) .cnjnctn-or:before {
           <p>You <strong>may be exempt</strong> from <strong>paying</strong> the Underused Housing Tax for a <strong>calendar year</strong> depending on the:</p>
           <details>
             <summary>Type of owner</summary>
-            <p>You may be exempt if you are a:</p>
+            <p>You may be exempt from paying the tax if you are a:</p>
             <ul id="exp-1">
               <li>Specified Canadian corporation</li>
               <li>
@@ -1237,7 +1237,7 @@ html:lang(fr) .cnjnctn-or:before {
           </details>
           <details>
             <summary>Occupant of the residential property</summary>
-            <p>You may be exempt if the property is:</p>
+            <p>You may be exempt from paying the tax if the property is:</p>
             <div id="exp-4">
               <div id="exp-4-1">
                 <ul class="cnjnctn-type-or cnjnctn-sm">
@@ -1256,7 +1256,7 @@ html:lang(fr) .cnjnctn-or:before {
                     <p>To qualify for this exemption, a dwelling unit that is part of the residential property must be the primary place <mark>of residence</mark> of any of the following for the calendar year:</p>
 			  <ul>
 				  <li>you or your spouse or common-law partner</li>
-				  <li>your child, or your spouse's or common-law partner's child, who occupies the residential property while pursuing authorized study at a designated learning institution.</li>
+				  <li>your child, or your spouse's or common-law partner's child, who occupies the residential property while pursuing authorized study at a designated learning institution</li>
 			  </ul>
                     <p>Review tax notice:<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank"> UHTN6, Exemption for residential properties that are used as a primary place of residence</a></p>
                   </div>
@@ -1277,7 +1277,7 @@ html:lang(fr) .cnjnctn-or:before {
           </details>
           <details>
             <summary>Availability of the residential property</summary>
-            <p>You may be exempt if the property is:</p>
+            <p>You may be exempt from paying the tax if the property is:</p>
             <ul id="exp-2">
               <li>
                 <p>Newly constructed</p>
@@ -1298,7 +1298,7 @@ html:lang(fr) .cnjnctn-or:before {
           <details>
             <summary>Location and use of the residential property</summary>
             <p>Only affected owners who are <strong>individuals</strong> qualify for this exemption.</p>
-            <p>You may be exempt if the property is:</p>
+            <p>You may be exempt from paying the tax if the property is:</p>
             <div id="exp-3">
               <ul>
                 <li>A vacation property located in an <strong>eligible area of Canada</strong> and used by you or your spouse or common-law partner for at least 28 days in the calendar year</li>
@@ -1306,7 +1306,8 @@ html:lang(fr) .cnjnctn-or:before {
               <p><span class="fas fa-search-location fa-lg pull-left mrgn-rght-sm"></span>Determine if your residential property is located in an eligible area of Canada for the purposes of this exemption by using the <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtExpnTl?request_locale=en_CA" target="_blank">Underused housing tax vacation property designation tool</a>.</p>
             </div>
             <p class="mrgn-tp-lg">Review tax notice:<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank"> UHTN5, Exemption for vacation properties </a></p>
-          </details>
+          <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></p>
+	  </details>
         </details>
         <p class="mrgn-tp-md">If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act, you may contact us or request a ruling or interpretation about how the tax applies to your specific situation.</p>
         <p><a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">Contact us</a></p>
