--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1219,6 +1219,7 @@ html:lang(fr) .cnjnctn-or:before {
               <li>
                 <p>Partner of a specified Canadian partnership, or a trustee of a specified Canadian trust</p>
               </li>
+		    <ul><li>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681246">UHTN4, What are specified Canadian partnerships, trusts, and corporations</a></li></ul>
               <li>
                 <p>New owner in the calendar year</p>
               </li>
