--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -887,13 +887,9 @@ html:lang(fr) .cnjnctn-or:before {
                   <li>A foreign national or temporary resident of Canada
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                       <div class="wb-fieldflow-header">
-                        <p class="wb-fieldflow-label"><span id="labelledby6a" aria-labelledby="labelledby6a labelledby6b">For Canadian income tax purposes, do you own the residential property as a trustee of any of the following:</span></p>
+                        <p class="wb-fieldflow-label"><span id="labelledby6a" aria-labelledby="labelledby6a labelledby6b">Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</span></p>
                         <div class="gc-font-2019" id="labelledby6b">
-                          <ul>
-                            <li>Mutual fund trust</li>
-                            <li>Real estate investment trust</li>
-                            <li>Specified investment flow-through (SIFT) trust</li>
-                          </ul>
+                        
                         </div>
                       </div>
                       <ul>
@@ -926,13 +922,9 @@ html:lang(fr) .cnjnctn-or:before {
                         <li>No
                           <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                             <div class="wb-fieldflow-header">
-                              <p class="wb-fieldflow-label"><span id="labelledby7a" aria-labelledby="labelledby7a labelledby7b">For Canadian income tax purposes, do you own the residential property as a trustee of any of the following:</span></p>
+                              <p class="wb-fieldflow-label"><span id="labelledby7a" aria-labelledby="labelledby7a labelledby7b">Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</span></p>
                               <div class="gc-font-2019" id="labelledby7b">
-                                <ul>
-                                  <li>Mutual fund trust</li>
-                                  <li>Real estate investment trust</li>
-                                  <li>Specified investment flow-through (SIFT) trust</li>
-                                </ul>
+                             
                               </div>
                             </div>
                             <ul>
