--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1211,13 +1211,14 @@ html:lang(fr) .cnjnctn-or:before {
               <li>
                 <p>Partner of a specified Canadian partnership, or a trustee of a specified Canadian trust</p>
               </li>
-		    <ul><li>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681246">UHTN4, What are specified Canadian partnerships, trusts, and corporations</a></li></ul>
-              <li>
+		     <li>
                 <p>New owner in the calendar year</p>
               </li>
               <li>
                 <p>Co-owner or personal representative of a deceased owner, or if the owner was deceased in the current or previous calendar year</p>
               </li>
+		    <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681246">UHTN4, What are specified Canadian partnerships, trusts, and corporations</a></p>
+            </p>
             </ul>
             <p>Review tax notices:</p>
             <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245" target="_blank">UHTN4, Exemptions for specified Canadian partnerships, trusts and corporations</a></p>
